<resources>
    <string name="app_name">Status Saver</string>
    <string name="english">English</string>
    <string name="french">Anglais</string>
    <string name="german">Deutsch</string>
    <string name="japanese">日本</string>
    <string name="korean">한국인</string>
    <string name="portuguese">Português</string>
    <string name="russian">Русский</string>
    <string name="spanish">Español</string>
    <string name="tab_images">Images</string>
    <string name="tab_videos">Videos</string>
    <string name="tab_saved">Saved</string>
    <string name="status_saved_message">status saved successfully!</string>
    <string name="status_deleted_message">status deleted successfully!</string>
    <string name="search_here">search here</string>
    <string name="country">country</string>
    <string name="phone_number">phone number</string>
    <string name="enter_message_here">enter message here</string>
    <string name="send_message">Send message</string>
    <string name="general">General</string>
    <string name="storage_folder">Storage folder</string>
    <string name="language">Language</string>
    <string name="app_theme">App theme</string>
    <string name="others">Others</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="how_to_use">How to use?</string>
    <string name="no_status_message">No status available. Please check the status on Whatsapp and come back</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_message">Allow Status Saver to read and save your WhatsApp status</string>
    <string name="permission_message_11">*Use of folder access permission is required only for Android 11 or later.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="recent_status">Recent Status</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="video_player">Video Player</string>
    <string name="step_1">Step 1: Open Whatsapp</string>
    <string name="step_2">Step 2: View the status if any</string>
    <string name="step_3">Step 3: Come back and status will be added</string>
    <string name="steps_to_use">Steps to use</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="ad">Ad</string>
</resources>