<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/_16dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_1"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/step_2"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_3"
        android:layout_marginTop="@dimen/_24dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
</LinearLayout>