<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_8dp"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bt_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:drawablePadding="@dimen/_24dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/share"
        android:paddingHorizontal="@dimen/_16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/share" />
    <TextView
        android:id="@+id/bt_repost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:drawablePadding="@dimen/_24dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/repost"
        android:paddingHorizontal="@dimen/_16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/repost" />
    <TextView
        android:id="@+id/bt_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:drawablePadding="@dimen/_24dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/delete"
        android:paddingHorizontal="@dimen/_16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/delete"/>
    <TextView
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:drawablePadding="@dimen/_24dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/download"
        android:paddingHorizontal="@dimen/_16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/save"/>
</LinearLayout>