<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textColor="?attr/colorPrimary"
            android:paddingHorizontal="@dimen/_16dp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/folder" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_folder"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="storage/Pictures/Status Saver"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_language"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/translate" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                <TextView
                    android:id="@+id/tv_selected_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_mode"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dark_mode" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_theme"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                <TextView
                    android:id="@+id/tv_selected_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:paddingHorizontal="@dimen/_16dp"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <LinearLayout
            android:id="@+id/bt_rate"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rate" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_share"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_policy"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/privacy_policy" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_help"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="56dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_use"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>